# BruceVoice

./: .gitignore  README.md  pyproject.toml  requirements.txt
tests/: test_audio.py  test_pitch.py  test_transcribe.py
voice_analyzer/: __init__.py  audio.py  diarize.py  enhance.py  main.py  medlatec.py  output.py  pitch.py  transcribe.py
web/: app.py
web/static/: index.html
