[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-analyzer"
version = "0.1.0"
description = "Vietnamese audio transcription, pitch analysis, and speaker diarization CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "transformers>=4.40.0",
    "torch>=2.1.0",
    "accelerate>=0.28.0",
    "safetensors>=0.4.0",
    "pyannote.audio>=3.1.0",
    "librosa>=0.10.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.1",
    "click>=8.1.7",
    "tqdm>=4.66.0",
]

[project.scripts]
voice-analyzer = "voice_analyzer.main:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["voice_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
